didn't push up mostly done file
might be fixed? run home?

--- a/css/blog.css
+++ b/css/blog.css
@@ -21,6 +21,7 @@ video {
     width:100%;
     height:auto;
     z-index:49;
+    opacity: .8;
 }
 
 html{
@@ -30,4 +31,39 @@ html{
 body {
     margin: 0;
     overflow:scroll;
+}
+
+h1 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    color: #000000;
+    font-size: 1.75em;
+    padding-left: 6.82%;
+    padding-right: 15.91%;
+}
+
+h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    color: #000000;
+    font-size: 1.5em;
+    padding-left: 6.82%;
+    padding-right: 15.91%;
+}
+
+h3 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    color: #000000;
+    font-size: 1.25em;
+    padding-left: 6.82%;
+    padding-right: 15.91%;
+}
+
+p {
+    font-family: "Open Sans", sans-serif;
+	color:#000;
+    padding-left: 6.82%;
+    padding-right: 15.91%;
+    padding-bottom: 1.705%;
 }
