--- a/css/blog.css
+++ b/css/blog.css
@@ -3,8 +3,12 @@ http://commons.oreilly.com/wiki/index.php/SVG_Essentials/Clipping_and_Masking
 http://www.techrepublic.com/blog/web-designer/how-to-use-the-css-clip-and-mask-properties/
 http://codepen.io/SahAssar/pen/YPWxWX
 */
+body {
+    margin: 0;
+}
 
 video {
+    position:relative;
     left:0px;
     top:0px;
     width:100%;
@@ -14,7 +18,6 @@ video {
 #overlay {
     position:absolute;
     left:0px;
-    top: -2.5%;
     width:100%;
     height:auto;
     z-index:49;
