--- a/css/mLeSTYLE.css
+++ b/css/mLeSTYLE.css
@@ -37,7 +37,11 @@ body {
     width: 100%;
     height: 100%;
     margin: 0 0 0 0;
-    background-color: lightgray;
+}
+
+#masthead img {
+    width:100%;
+    height:auto;
 }
 
 /*https://www.emailonacid.com/blog/article/email-development/a_slick_new_image_swapping_technique_for_responsive_emails*/
@@ -57,13 +61,11 @@ span#swap {
 
 /* http://stackoverflow.com/questions/21610677/how-evenly-space-divs-each-of-a-different-width-within-a-parent-div */
 .navList {
-    border: 2px dashed blue;
     display: flex;
     justify-content: space-between;
     padding-left: 6.82%;
-    margin-right: 15.91%;
+    padding-right: 15.91%;
     margin-bottom: 3.41%;
-    width: 77%;
     height:auto;
     list-style:none;
     font-size: 2.5vw;
@@ -80,30 +82,39 @@ span#swap {
 
 /*divs for sticky nav bar*/
 nav {
+    width: 100%;
     height: auto;
     z-index:500;
-    margin-bottom: 3.41%;
 }
 
 .nav-placeholder {
-    margin: 0 0 3.41% 0;
+    margin: 0;
+    border: 1px solid #fff;
+    padding-bottom: 3.41%;
 }
 
 /*classes for sticky nav bar*/
 .fixed {
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
+    position:fixed;
+    top:0;
+    margin-top:0px;
+    left:0;
+    width:100%;
+    -webkit-box-shadow: 0 2px 2px 2px rgba(0,0,0,.1);
+    box-shadow: 0 2px 2px 2px rgba(0,0,0,.1);
+}
+
+.fixed .navList {
+    margin-top:0px;
+    margin-bottom:0px;
 }
 
 .fixed .nav-inner {
-    margin: 0 0 3.41% 0;
+    margin: 0;
 }
 
 /*for resizing thumbnails on Portfolio page*/
 #thumbsContainer {
-    border: 2px dashed;
     margin-left: 6.82%;
     margin-right: 15.91%;
 }
@@ -112,7 +123,6 @@ nav {
 #alignRow1,
 #alignRow2,
 #alignRow3 {
-    border: 2px dashed red;
     flex-flow: row nowrap;
     display: flex;
     justify-content: space-between;
